--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -3,9 +3,9 @@ object frmPrincipal: TfrmPrincipal
   Height = 688
   Top = 171
   Width = 880
-  Caption = 'iBiblia'
-  ClientHeight = 672
-  ClientWidth = 881
+  Caption = 'iBiblia VT'
+  ClientHeight = 668
+  ClientWidth = 880
   KeyPreview = True
   Menu = MainMenu1
   OnActivate = FormActivate
@@ -20,8 +20,8 @@ object frmPrincipal: TfrmPrincipal
   object StatusBar1: TStatusBar
     Left = 0
     Height = 28
-    Top = 644
-    Width = 881
+    Top = 640
+    Width = 880
     Panels = <>
   end
   object ToolBar1: TToolBar
@@ -95,23 +95,23 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 490
+    Height = 486
     Top = 33
     Width = 881
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 490
-    ClientWidth = 882
+    ClientHeight = 486
+    ClientWidth = 881
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 488
+      Height = 484
       Top = 1
       Width = 736
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 488
-      ClientWidth = 737
+      ClientHeight = 484
+      ClientWidth = 736
       TabOrder = 0
       object ScrollBox1: TScrollBox
         AnchorSideBottom.Control = Splitter2
@@ -170,7 +170,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 130
+        Height = 126
         Top = 357
         Width = 734
         HorzScrollBar.Page = 1
@@ -218,17 +218,17 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 488
+      Height = 484
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 488
+      Height = 484
       Top = 1
       Width = 138
       Align = alLeft
-      DefaultItemHeight = 22
+      DefaultItemHeight = 18
       Enabled = False
       Images = ImageListTreeView
       ReadOnly = True
@@ -239,8 +239,8 @@ object frmPrincipal: TfrmPrincipal
   object Memo1: TMemo
     Left = 0
     Height = 103
-    Top = 531
-    Width = 754
+    Top = 527
+    Width = 753
     Anchors = [akLeft, akRight, akBottom]
     Enabled = False
     TabOrder = 3
@@ -248,7 +248,7 @@ object frmPrincipal: TfrmPrincipal
   object RadioGroup1: TRadioGroup
     Left = 760
     Height = 110
-    Top = 531
+    Top = 527
     Width = 117
     Anchors = [akRight, akBottom]
     AutoFill = True
@@ -276,8 +276,8 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 20
-    Top = 624
-    Width = 881
+    Top = 620
+    Width = 880
     Align = alBottom
     TabOrder = 5
     Visible = False
