Incluindo diferença visual em palavras do texto original com strongs
Isso é útil quando o módulo usado como texto origem não tem strongs
associados as todas as palavras. Agora existe uma opção para habilitar
ou desabilitar esta funcionalidade.

--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -360,6 +360,10 @@ object frmPrincipal: TfrmPrincipal
         Caption = 'Sincronizar iBiblia com versículo do TheWord'
         OnClick = MenuItemSynciBibliaClick
       end
+      object MenuItemStrongNegrito: TMenuItem
+        Caption = 'Exibir palavras com tags de strong em negrito'
+        OnClick = MenuItemStrongNegritoClick
+      end
     end
   end
   object ActionList1: TActionList
