--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -4,21 +4,23 @@ object frmPrincipal: TfrmPrincipal
   Top = 171
   Width = 881
   Caption = 'iBiblia'
-  ClientHeight = 669
+  ClientHeight = 672
   ClientWidth = 881
   KeyPreview = True
   Menu = MainMenu1
+  OnActivate = FormActivate
   OnClose = FormClose
   OnCreate = FormCreate
+  OnDeactivate = FormDeactivate
   OnDestroy = FormDestroy
   OnKeyPress = FormKeyPress
   OnShow = FormShow
   Position = poDesktopCenter
-  LCLVersion = '1.4.2.0'
+  LCLVersion = '1.8.4.0'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 19
-    Top = 650
+    Height = 28
+    Top = 644
     Width = 881
     Panels = <>
   end
@@ -93,22 +95,22 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 487
+    Height = 490
     Top = 33
     Width = 882
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 487
+    ClientHeight = 490
     ClientWidth = 882
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 485
+      Height = 488
       Top = 1
       Width = 737
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 485
+      ClientHeight = 488
       ClientWidth = 737
       TabOrder = 0
       object ScrollBox1: TScrollBox
@@ -168,7 +170,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 127
+        Height = 130
         Top = 357
         Width = 735
         HorzScrollBar.Page = 1
@@ -216,13 +218,13 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 485
+      Height = 488
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 485
+      Height = 488
       Top = 1
       Width = 138
       Align = alLeft
@@ -236,7 +238,7 @@ object frmPrincipal: TfrmPrincipal
   object Memo1: TMemo
     Left = 0
     Height = 103
-    Top = 528
+    Top = 531
     Width = 754
     Anchors = [akLeft, akRight, akBottom]
     Enabled = False
@@ -245,7 +247,7 @@ object frmPrincipal: TfrmPrincipal
   object RadioGroup1: TRadioGroup
     Left = 761
     Height = 110
-    Top = 528
+    Top = 531
     Width = 117
     Anchors = [akRight, akBottom]
     AutoFill = True
@@ -258,8 +260,8 @@ object frmPrincipal: TfrmPrincipal
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 92
-    ClientWidth = 115
+    ClientHeight = 90
+    ClientWidth = 113
     Enabled = False
     ItemIndex = 0
     Items.Strings = (
@@ -273,7 +275,7 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 20
-    Top = 630
+    Top = 624
     Width = 881
     Align = alBottom
     TabOrder = 5
@@ -290,7 +292,7 @@ object frmPrincipal: TfrmPrincipal
       object MenuItem3: TMenuItem
         Action = ActionAbrirProjeto
       end
-      object MenuItem23: TMenuItem
+      object MenuItemRecent: TMenuItem
         Caption = 'Abrir recente'
       end
       object MenuItem9: TMenuItem
@@ -353,8 +355,12 @@ object frmPrincipal: TfrmPrincipal
         OnClick = MenuItem22Click
       end
       object MenuItemSyncTheWord: TMenuItem
-        Caption = 'Sincronizar versículo no theWord'
+        Caption = 'Sincronizar TheWord com versículo do iBiblia'
         OnClick = MenuItemSyncTheWordClick
+      end
+      object MenuItemSynciBiblia: TMenuItem
+        Caption = 'Sincronizar iBiblia com versículo do TheWord'
+        OnClick = MenuItemSynciBibliaClick
       end
     end
   end
