Opção de exibir quantidade de palavras com strongs
Implementada opção de exibir a quantidade de palavras com tags de strong
em cada versículo. A funcionalidade, quando habilitada, só valerá para
os próximos versículos exibidos. Isso pode ser corrigido no futuro.

Corrigi também um bug na substituição do texto do versículo aproveitando
as associações - se o novo texto contivesse menos sintagmas, alguns
sintagmas antigos ficavam perdidos.

--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -1,7 +1,7 @@
 object frmPrincipal: TfrmPrincipal
-  Left = 333
+  Left = 318
   Height = 697
-  Top = 139
+  Top = 142
   Width = 880
   Caption = 'iBiblia'
   ClientHeight = 677
@@ -363,6 +363,10 @@ object frmPrincipal: TfrmPrincipal
       object MenuItemStrongNegrito: TMenuItem
         Caption = 'Exibir palavras com tags de strong em negrito'
         OnClick = MenuItemStrongNegritoClick
+      end
+      object MenuItemStrongsCount: TMenuItem
+        Caption = 'Exibir contagem de palavras com tags de strong'
+        OnClick = MenuItemStrongsCountClick
       end
     end
   end
