F8 toggles exibição das tags de strong
Agora a tecla F8 exibe/oculta as tags de strong associadas às palavras.
A exibição é "temporária" pois só estou desenhando caixinhas de texto
diretamente no TPanel dos versículos. Uma solução definitiva seria
estender a classe TPanel e sobrescrever o evento Paint.

--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -508,6 +508,11 @@ object frmPrincipal: TfrmPrincipal
       Caption = 'ActionSyncTheWordVerse'
       OnExecute = ActionSyncTheWordVerseExecute
     end
+    object ActionMostrarTags: TAction
+      Caption = 'ActionMostrarTags'
+      OnExecute = ActionMostrarTagsExecute
+      ShortCut = 119
+    end
   end
   object OpenDialog1: TOpenDialog
     Title = 'Abrir projeto existente'
