--- a/formexportar.lfm
+++ b/formexportar.lfm
@@ -3,7 +3,7 @@ object frmExportarProjeto: TfrmExportarProjeto
   Height = 427
   Top = 174
   Width = 789
-  Caption = 'Exportar associação'
+  Caption = 'Export association'
   ClientHeight = 427
   ClientWidth = 789
   Position = poMainFormCenter
@@ -13,11 +13,11 @@ object frmExportarProjeto: TfrmExportarProjeto
     Height = 360
     Top = 16
     Width = 776
-    ActivePage = TabSheet3
-    TabIndex = 2
+    ActivePage = TabSheet1
+    TabIndex = 0
     TabOrder = 0
     object TabSheet1: TTabSheet
-      Caption = 'Texto destino enriquecido'
+      Caption = 'Tagged destination text'
       ClientHeight = 332
       ClientWidth = 768
       object MemoRodapeDestino: TMemo
@@ -42,53 +42,53 @@ object frmExportarProjeto: TfrmExportarProjeto
         Left = 13
         Height = 15
         Top = 89
-        Width = 102
-        Caption = 'Rodapé do módulo'
+        Width = 97
+        Caption = 'Module properties'
         ParentColor = False
       end
       object cbExportarNAComoItalicos: TCheckBox
         Left = 13
         Height = 19
         Top = 9
-        Width = 255
-        Caption = 'Tratar palavras não-associadas como itálicos'
+        Width = 286
+        Caption = 'Export unassociated words as added words (italics)'
         TabOrder = 1
       end
       object cbExportarMorfologia: TCheckBox
         Left = 13
         Height = 19
         Top = 33
-        Width = 125
-        Caption = 'Exportar morfologia'
+        Width = 147
+        Caption = 'Export morphology tags'
         TabOrder = 2
       end
       object cbExportarComentarios: TCheckBox
         Left = 13
         Height = 19
         Top = 57
-        Width = 198
-        Caption = 'Exportar comentários como notas'
+        Width = 212
+        Caption = 'Export comments as translator notes'
         TabOrder = 3
       end
       object cbStrongsReutilizados: TCheckBox
         Left = 372
         Height = 19
         Top = 9
-        Width = 169
-        Caption = 'Sinalizar Strongs reutilizados'
+        Width = 127
+        Caption = 'Mark reused strongs'
         TabOrder = 4
       end
       object cbStrongsNaoTraduzidos: TCheckBox
         Left = 372
         Height = 19
         Top = 33
-        Width = 187
-        Caption = 'Sinalizar Strongs não traduzidos'
+        Width = 131
+        Caption = 'Mark unused strongs'
         TabOrder = 5
       end
     end
     object TabSheet2: TTabSheet
-      Caption = 'Texto origem interlinear'
+      Caption = 'Interlinear source text'
       ClientHeight = 332
       ClientWidth = 768
       object MemoRodapeOrigem: TMemo
@@ -112,13 +112,13 @@ object frmExportarProjeto: TfrmExportarProjeto
         Left = 14
         Height = 15
         Top = 89
-        Width = 102
-        Caption = 'Rodapé do módulo'
+        Width = 97
+        Caption = 'Module properties'
         ParentColor = False
       end
     end
     object TabSheet3: TTabSheet
-      Caption = 'Concordância Grega'
+      Caption = 'Strong''s concordance'
       ClientHeight = 332
       ClientWidth = 768
       object cbConcordanciaDetalhada: TCheckBox
@@ -126,7 +126,7 @@ object frmExportarProjeto: TfrmExportarProjeto
         Height = 19
         Top = 9
         Width = 169
-        Caption = 'Abrir por formas flexionadas'
+        Caption = 'Group by inflectioned forms'
         Checked = True
         State = cbChecked
         TabOrder = 0
@@ -144,7 +144,7 @@ object frmExportarProjeto: TfrmExportarProjeto
         EditLabel.Height = 15
         EditLabel.Top = 38
         EditLabel.Width = 264
-        EditLabel.Caption = 'Abreviação'
+        EditLabel.Caption = 'Abbreviation'
         EditLabel.ParentColor = False
         TabOrder = 1
       end
@@ -155,7 +155,7 @@ object frmExportarProjeto: TfrmExportarProjeto
     Height = 25
     Top = 392
     Width = 75
-    Caption = 'Exportar'
+    Caption = 'Export'
     Default = True
     ModalResult = 1
     OnClick = btExportarClick
@@ -167,7 +167,7 @@ object frmExportarProjeto: TfrmExportarProjeto
     Top = 392
     Width = 75
     Cancel = True
-    Caption = 'Cancelar'
+    Caption = 'Cancel'
     ModalResult = 2
     TabOrder = 2
   end
