--- a/formverserules.lfm
+++ b/formverserules.lfm
@@ -6,13 +6,13 @@ object FrmEscolherVerseRules: TFrmEscolherVerseRules
   HorzScrollBar.Page = 1160
   VertScrollBar.Page = 398
   AutoScroll = True
-  Caption = 'Escolher verse.rules'
+  Caption = 'Choose verse rules'
   ClientHeight = 450
   ClientWidth = 1171
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poOwnerFormCenter
-  LCLVersion = '1.6.2.0'
+  LCLVersion = '1.8.4.0'
   object ckgVerseRules: TCheckGroup
     Left = 0
     Height = 450
@@ -20,7 +20,7 @@ object FrmEscolherVerseRules: TFrmEscolherVerseRules
     Width = 1171
     Align = alClient
     AutoFill = True
-    Caption = 'Escolha as regras que deseja aplicar'
+    Caption = 'Choose verse rules you''d like to apply'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
     ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
@@ -29,7 +29,6 @@ object FrmEscolherVerseRules: TFrmEscolherVerseRules
     ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    OnClick = ckgVerseRulesClick
     TabOrder = 0
   end
   object Button1: TButton
@@ -39,7 +38,7 @@ object FrmEscolherVerseRules: TFrmEscolherVerseRules
     Width = 75
     Anchors = [akRight, akBottom]
     Cancel = True
-    Caption = '&Cancelar'
+    Caption = '&Cancel'
     ModalResult = 2
     TabOrder = 1
   end
@@ -72,7 +71,6 @@ object FrmEscolherVerseRules: TFrmEscolherVerseRules
     Width = 592
     ItemHeight = 0
     MultiSelect = True
-    OnSelectionChange = lbParaSelectionChange
     TabOrder = 4
     Visible = False
   end
