Change modifying key from Ctrl to Alt (#6)
The optional modifiying key used to fire the dictionary popup was
changed from Ctrl to Alt. That's because Ctrl key is used in association
and this could misfire the popup.

--- a/formpopup.lfm
+++ b/formpopup.lfm
@@ -6,7 +6,7 @@ object frmDictionaryPopup: TfrmDictionaryPopup
   BorderIcons = []
   BorderStyle = bsSizeToolWin
   BorderWidth = 1
-  Caption = 'Dicionário'
+  Caption = 'Dictionary'
   ClientHeight = 418
   ClientWidth = 425
   FormStyle = fsStayOnTop
