--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -4,7 +4,7 @@ object frmPrincipal: TfrmPrincipal
   Top = 142
   Width = 880
   Caption = 'iBiblia'
-  ClientHeight = 678
+  ClientHeight = 677
   ClientWidth = 880
   KeyPreview = True
   Menu = MainMenu1
@@ -17,8 +17,8 @@ object frmPrincipal: TfrmPrincipal
   LCLVersion = '1.8.4.0'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 20
-    Top = 658
+    Height = 28
+    Top = 649
     Width = 880
     Panels = <>
   end
@@ -93,22 +93,22 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 496
+    Height = 495
     Top = 33
     Width = 880
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 496
+    ClientHeight = 495
     ClientWidth = 880
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 494
+      Height = 493
       Top = 1
       Width = 735
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 494
+      ClientHeight = 493
       ClientWidth = 735
       TabOrder = 0
       object ScrollBox1: TScrollBox
@@ -168,7 +168,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 136
+        Height = 135
         Top = 357
         Width = 733
         HorzScrollBar.Page = 1
@@ -216,13 +216,13 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 494
+      Height = 493
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 494
+      Height = 493
       Top = 1
       Width = 138
       Align = alLeft
@@ -236,7 +236,7 @@ object frmPrincipal: TfrmPrincipal
   object Memo1: TMemo
     Left = 0
     Height = 103
-    Top = 537
+    Top = 536
     Width = 753
     Anchors = [akLeft, akRight, akBottom]
     Enabled = False
@@ -245,7 +245,7 @@ object frmPrincipal: TfrmPrincipal
   object RadioGroupStatus: TRadioGroup
     Left = 759
     Height = 110
-    Top = 537
+    Top = 536
     Width = 117
     Anchors = [akRight, akBottom]
     AutoFill = True
@@ -258,7 +258,7 @@ object frmPrincipal: TfrmPrincipal
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 92
+    ClientHeight = 90
     ClientWidth = 113
     Enabled = False
     ItemIndex = 0
@@ -273,7 +273,7 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 20
-    Top = 638
+    Top = 629
     Width = 880
     Align = alBottom
     TabOrder = 5
@@ -356,7 +356,7 @@ object frmPrincipal: TfrmPrincipal
         end
       end
       object MenuItem21: TMenuItem
-        Caption = 'Show dictionary popup when CTRL is pressed'
+        Caption = 'Show dictionary popup when only with Alt pressed'
         OnClick = MenuItem21Click
       end
       object MenuItem22: TMenuItem
